--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Dice Simulator for L5R"
     />
+
+    <meta property="og:url"                content="https://l5r-dice-sim.now.sh" />
+    <meta property="og:type"               content="app" />
+    <meta property="og:title"              content="L5R Dice Sim" />
+    <meta property="og:description"        content="Dice Simulator for L5R" />
+    <meta property="og:image"              content="%PUBLIC_URL%/ms-icon-310x310.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon-180x180.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
